--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -10,7 +10,7 @@
     margin-bottom: 0.5em;
     padding-bottom: 0.35em;
     font-size: 12px;
-    border-bottom: variables.$border-bottom;
+    border-bottom: variables.$border;
 
     span.author {
         overflow: auto;
