--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -36,7 +36,7 @@ div#primary.show-sidebar {
         margin: 0 auto;
         padding-bottom: 1.8em;
         width: variables.$content-width;
-        border-bottom: variables.$border-bottom;
+        border-bottom: variables.$border;
 
         div.blog-content {
             display: grid;
@@ -48,7 +48,7 @@ div#primary.show-sidebar {
                 div.main-title {
                     display: flex;
                     justify-content: space-between;
-                    border-bottom: variables.$border-bottom;
+                    border-bottom: variables.$border;
                     font-family: 'Open sans';
                     margin-bottom: 1.5em;
         
@@ -219,25 +219,102 @@ div#primary.show-sidebar {
                         width: 100%;
                         padding: 0.3em 0;
                         font-size: 18px;
-                        border-top: variables.$border-bottom;
-                        border-bottom: variables.$border-bottom;
+                        border-top: variables.$border;
+                        border-bottom: variables.$border;
                     }
 
                     ul.comment-list {
                         list-style: none;
                         padding: 0;
-                        margin: 1.5em 0;
-                        padding-bottom: 1em;
-                        border-bottom: variables.$border-bottom;
+                        margin-bottom: 1em;
+
+                        li.comment {
+                            // display: flex;
+
+                            article.comment-body {
+                                padding: 1em 0.5em;
+
+                                span.dashicons {
+                                    float: left;
+                                    margin-top: 0.1em;
+                                    opacity: 0.4;
+                                }
+
+                                div.comment-block {
+                                    margin-left: 1.5em;
+
+                                    footer.comment-meta {
+                                        font-size: 13px;
+                                        margin-bottom: 0.4em;
+
+                                        span.comment-author {
+                                            color: #ef4634;
+
+                                            a {
+                                                color: #ef4634;
+                                            }
+                                        }
+
+                                        .comment-awaiting-moderation {
+                                            display: block;
+                                        }
+                                    }
+
+                                    div.comment-content {
+                                        font-size: 14px;
+                                        line-height: 21px;
+
+                                        p:last-child {
+                                            margin-bottom: 0;
+                                        }
+                                    }
+
+                                    div.reply {
+                                        font-size: 14px;
+                                        line-height: 21px;
+                                        text-align: right;
+
+                                        i {
+                                            font-size: 12px;
+                                            opacity: 0.4;
+                                        }
+
+                                        a {
+                                            color: #62585f;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+
+                        li.comment.current-comment {
+                            background-color: #ffffff;
+                        }
 
                         ul.children {
                             list-style: none;
-                            // padding: 0;
+                            padding-left: 1em;
                             // margin: 1em 0;
+
+                            article.comment-body {
+                                padding-top: 0;
+                                padding-bottom: 0;
+                            }
                         }
                     }
 
-                    div.comment-respond {
+                    div#respond {
+                        padding-top: 1em;
+                        border-top: variables.$border;
+
+                        #reply-title > small {
+                            float: right;
+                            font-size: 13px;
+                            
+                            a {
+                                color: #ef4634;
+                            }
+                        }
 
                         .comment-reply-title {
                             font-weight: normal;
@@ -251,7 +328,7 @@ div#primary.show-sidebar {
                                 textarea {
                                     width: 620px;
                                     height: 90px;
-                                    border: variables.$border-bottom;
+                                    border: variables.$border;
                                 }
                             }
 
@@ -270,12 +347,12 @@ div#primary.show-sidebar {
                                 input {
                                     width: 100%;
                                     height: 30px;
-                                    border: variables.$border-bottom;
+                                    border: variables.$border;
                                 }
                             }
 
                             p.form-submit {
-                                float: right;
+                                text-align: right;
                                 
                                 input#submit {
                                     font-size: 14px;
@@ -295,6 +372,7 @@ div#primary.show-sidebar {
                 display: grid;
                 grid-template-columns: auto;
                 grid-row-gap: 2em;
+                height: fit-content;
 
                 .widget {
                     overflow: auto;
@@ -305,12 +383,14 @@ div#primary.show-sidebar {
                         font-size: 25px;
                         color: #62585f;
                         text-shadow: 2px 2px #ffffff;
-                        border-bottom: variables.$border-bottom;
+                        border-bottom: variables.$border;
                         padding-bottom: 0.25em;
                     }
                 }
     
                 .widget_archive {
+                    height: 10em;
+                    overflow: auto;
     
                     ul {
                         list-style: none;
@@ -413,7 +493,7 @@ div#primary.show-sidebar {
         width: 150px;
         height: 20px;
         background-color: #ffffff;
-        border: variables.$border-bottom;
+        border: variables.$border;
         border-radius: 3px;
     }
 
@@ -523,7 +603,7 @@ footer.site-footer {
         grid-template-columns: 50% 50%;
         font-family: 'Open sans';
         font-weight: normal;
-        border-bottom: variables.$border-bottom;
+        border-bottom: variables.$border;
 
         span.title {
             font-size: 25px;
