--- a/css/theme.css
+++ b/css/theme.css
@@ -344,6 +344,63 @@ div#primary.show-sidebar main#main div.blog-content aside.widget-area .widget .w
   text-shadow: 2px 2px #ffffff;
   border-bottom: 1px solid #62585f;
   padding-bottom: 0.25em;
+  overflow: auto;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area div.portfolio-widget-block {
+  display: grid;
+  grid-template-columns: 60px 60px 60px 60px;
+  grid-gap: 10px;
+  margin-top: 1em;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area div.portfolio-widget-block img {
+  height: 60px;
+  width: 60px;
+  border-radius: 5px;
+  object-fit: cover;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area div.designfly-posts-widget-block {
+  display: grid;
+  grid-template-columns: 270px;
+  grid-row-gap: 10px;
+  font-family: "Open sans";
+  font-weight: normal;
+  color: #62585f;
+  margin-top: 1em;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area div.designfly-posts-widget-block div.widget-post-block {
+  display: flex;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area div.designfly-posts-widget-block div.widget-post-block img {
+  height: 45px;
+  width: 45px;
+  border-radius: 3px;
+  object-fit: cover;
+  margin-right: 10px;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area div.designfly-posts-widget-block div.widget-post-block div.widget-post-details {
+  position: relative;
+  top: -0.3em;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area div.designfly-posts-widget-block div.widget-post-block div.widget-post-details span.post-title {
+  font-size: 14px;
+  display: block;
+  overflow: auto;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area div.designfly-posts-widget-block div.widget-post-block div.widget-post-details span.post-title a.post-title-link {
+  color: #62585f;
+  text-decoration: none;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area div.designfly-posts-widget-block div.widget-post-block div.widget-post-details span.post-title a.post-title-link:hover {
+  color: #ef4634;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area div.designfly-posts-widget-block div.widget-post-block div.widget-post-details span.post-meta {
+  font-size: 12px;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area div.designfly-posts-widget-block div.widget-post-block div.widget-post-details span.post-meta span.author {
+  overflow: auto;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area div.designfly-posts-widget-block div.widget-post-block div.widget-post-details span.post-meta span.author a {
+  color: #ef4634;
 }
 div#primary.show-sidebar main#main div.blog-content aside.widget-area .widget_archive {
   height: 10em;
