Set page.php and 404.php with design

--- a/css/theme.css
+++ b/css/theme.css
@@ -8,6 +8,10 @@
 /*
 * This is a common css file for entire theme.
 */
+body {
+  font-family: "Open sans";
+}
+
 .site-header {
   height: 105px;
   width: 100%;
